--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -101,3 +101,90 @@
   border-radius: 4px;
   margin: 20px;
 }
+
+.text-task{
+  font-size: 18px;
+  letter-spacing: 1.8px;
+  color: #5e52ff;
+}
+
+.input-list{
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;              /* делает его круглым */
+  appearance: none;                /* убираем стандартный стиль */
+  border: 2px solid #555;
+  cursor: pointer;
+  position: relative;
+  transition: background 0.2s ease;
+}
+.input-list:checked {
+  background-color: #81da73;       /* зелёный при выборе */
+}
+
+.element-list{
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+
+}
+.line{
+  border: none;
+  border-top: 1px solid #343553;
+  margin: 16px 0;
+  width: 100%;
+
+}
+
+.menu-btn{
+  margin-top: auto;
+
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  padding-top: 20px;
+}
+.menu-btn-style{
+  background-color: #79c3f8;
+  border: none;
+}
+.menu-btn-style:hover{
+  background-color: #e4c943;
+  border: none;
+}
+.menu-btn-style:active{
+  background-color: #2f2e33;
+  border: none;
+}
+
+.card-password {
+  display: flex;
+  flex-direction: column;
+  height: 500px; /* или 100%, или 100vh, если нужно на всю высоту экрана */
+  width: 100%;
+  padding: 16px;
+  box-sizing: border-box;
+}
+
+.card-content {
+  flex: 1;
+  overflow-y: auto;
+  margin-bottom: 16px;
+}
+
+.root{
+  background-color: #ffffff;
+  color: #000000;
+}
+/* Светлая тема */
+.light {
+  background-color: #ffffff;
+  color: #000000;
+  font-weight: bold;
+}
+
+/* Тёмная тема */
+.dark {
+  background-color: #1e1e1e;
+  color: #ffffff;
+}
